# clean_git_history

./: .copier-answers.yml  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Earthfile  Makefile  README.md  dagger.json  docker-bake.hcl  flake.nix  justfile  renovate.json  tasks.py
.dagger/: go.mod  main.go
.github/: renovate.json  renovate.json5
.github/workflows/: claude-code-agent.yml  claude-code-review.yml  continuous-delivery.yml  continuous-integration.yml  dogfood.yml  git-history.yml  github-actions-workflows.yml  testfile
ci/: Dockerfile  check-clean-git-history.Dockerfile  check-clean-git-history.sh  check-conventional-commits-linting.Dockerfile  check-e2e-formatting.sh  check-github-actions-workflows-linting.Dockerfile  check-python-formatting.Dockerfile  check-python-formatting.sh  check-rust-formatting.Dockerfile  check-rust-linting.Dockerfile  check-yaml-formatting.Dockerfile  compile.Dockerfile  end-to-end-test.Dockerfile  end-to-end-test.sh  fix-e2e-formatting.sh  fix-python-formatting.Dockerfile  fix-python-formatting.sh  fix-rust-formatting.Dockerfile  fix-yaml-formatting.Dockerfile  publish-binary.Dockerfile  publish-binary.sh  publish-crate.Dockerfile  release-artifacts.sh  static-binary-test.Dockerfile  unit-test.Dockerfile
clean_git_history/: Cargo.toml  README.md
clean_git_history/end-to-end-tests/features/: from-arguments-conflicts.feature  from-arguments-missing.feature  from-shortened-commit-hash.feature  from_arguments_conflicts.feature  from_commit_hash.feature  from_reference.feature  from_shortened_commit_hash.feature  git-environment-variables.feature  git_environment_variables.feature
clean_git_history/end-to-end-tests/features/steps/: assertions.py  given.py  then.py  utilities.py  when.py
clean_git_history/src/: main.rs
clean_git_history/src/cli/: mod.rs
clean_git_history_lib/: Cargo.toml  README.md
clean_git_history_lib/src/: lib.rs
clean_git_history_lib/src/commit/: mod.rs
clean_git_history_lib/src/commit/tests/: mod.rs
clean_git_history_lib/src/commits/: mod.rs
clean_git_history_lib/src/commits/commit/: mod.rs
clean_git_history_lib/src/commits/commit/tests/: mod.rs
end-to-end-tests/features/: default_output.feature  from-commit-hash.feature  from-reference.feature  from_commit_hash.feature  from_reference.feature  from_shortened_commit_hash.feature  git_environment_variables.feature  github_actions_output.feature  ignore-merge-commits.feature  ignore_merge_commits.feature  max_commits.feature
end-to-end-tests/features/steps/: assertions.py  given.py  then.py  utilities.py  when.py
src/: main.rs  output.rs
src/cli/: mod.rs
src/commits/: mod.rs
src/commits/commit/: mod.rs
src/linting_results/: github_actions.rs  mod.rs  pretty.rs
src/model/commits/: mod.rs
src/model/commits/commit/: mod.rs
