[package]
name = "clean_git_history"
description = "A Git history linter to make sure it stays clean."
authors = ["C <DeveloperC@protonmail.com>"]
version = "0.1.1"
edition = "2018"
license = "AGPL-3.0"
repository = "https://gitlab.com/DeveloperC/clean_git_history"
readme = "README.md"
keywords = ["clean", "history", "lint", "linting", "git"]
categories = ["command-line-utilities", "development-tools"]


[dependencies]
# CLI parsing
structopt = "0.3.23"

# Logging
log = "0.4.14"
pretty_env_logger = "0.4.0"

# Reading commits
git2 = { version = "0.13.22", default-features = false, features=[] }


[profile.release]
lto = 'fat'
codegen-units = 1
