[package]
name = "clean_git_history"
description = "A Git history linter to ensure it stays clean for those who prefer rebasing and fast-forwarding compared to merge and squash commits."
authors = ["C <DeveloperC@protonmail.com>"]
version = "1.2.1"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/DeveloperC286/clean_git_history"
readme = "README.md"
keywords = ["clean", "history", "lint", "linting", "git"]
categories = ["command-line-utilities", "development-tools", "parser-implementations", "text-processing", "config"]


[dependencies]
# For CLI parsing.
clap = { version = "4.4.6", features = ["derive"] }

# For logging.
log = "0.4.20"
pretty_env_logger = "0.5.0"

# For fancy output.
ansi_term = "0.12.1"

# For error handling.
anyhow = "1.0.89"

git2 = { version = "0.20.0", default-features = false, features=[] }
