[package]
name = "clean_git_history_lib"
description = "A Git history linter to ensure it stays clean for those who prefer rebasing and fast-forwarding compared to merge and squash commits."
authors = ["C <DeveloperC@protonmail.com>"]
version = "0.1.1"
edition = "2018"
license = "AGPL-3.0"
repository = "https://gitlab.com/DeveloperC/clean_git_history"
readme = "README.md"
keywords = ["clean", "history", "lint", "linting", "git"]
categories = ["development-tools"]


[dependencies]
# Logging
log = "0.4.14"

# Reading commits
git2 = { version = "0.13.23", default-features = false, features=[] }
