[package]
name = "clean_git_history_lib"
description = "A Git history linter to ensure it stays clean for those who prefer rebasing and fast-forwarding compared to merge and squash commits."
authors = ["C <DeveloperC@protonmail.com>"]
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/DeveloperC286/clean_git_history"
readme = "README.md"
keywords = ["clean", "history", "lint", "linting", "git"]
categories = ["development-tools", "parsing", "parser-implementations", "text-processing", "config"]


[dependencies]
# For logging.
log = "0.4.20"

# For reading Git commits.
git2 = { version = "0.19.0", default-features = false, features=[] }
